--- a/package.json
+++ b/package.json
@@ -8,17 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@iconify/vue2": "^1.0.0-beta.1",
+    "@mdi/js": "^5.9.55",
+    "@nextindex/next-scss": "^1.2.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "google-fonts-webpack-plugin": "^0.4.4",
+    "vue": "^2.6.11",
+    "vue-awesome-countdown": "^1.1.4",
+    "vue-parallax": "^1.1.1",
+    "vue-parallaxy": "^1.1.1",
+    "vue2-flip-countdown": "^0.11.1",
+    "vuejs-countdown": "^0.2.1",
+    "vuejs-countdown-timer": "^2.1.3",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.9.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
