--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "execa": "latest",
     "@mdi/font": "^5.9.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
